...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSprintBtn" />

    <Button
        android:id="@+id/ViewCurrentSprintBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="goToViewCurrentSprintMenu"
        android:text="View Current Sprint"
        app:layout_constraintEnd_toEndOf="parent"
...
